# niri-shot

./: Cargo.toml  LICENSE  README.md
src/: app.rs  config.rs  main.rs
src/capture/: backend.rs  mod.rs
src/editor/: canvas.rs  mod.rs  shapes.rs  tools.rs
