[package]
name = "niri-shot"
version = "0.1.0"
edition = "2021"
description = "Screenshot tool for Niri Wayland compositor"
authors = ["Otavio Soares"]
license = "MIT"

[dependencies]
gtk4 = "0.9"
cairo-rs = { version = "0.20", features = ["png"] }
gdk4 = "0.9"
glib = "0.20"
image = "0.25"
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
anyhow = "1"
